# esfera

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: b579510408a6_first_migration.py
src/: main.py
src/api/: endpoints.py
src/core/: config.py  database.py
src/models/: address.py  user.py  user_event.py
src/schemas/: user_schema.py
src/tasks/: process_csv.py
tests/: test_project.py
