[project]
name = "esfera-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "greenlet>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "blue>=0.9.1",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
